change blog url
Signed-off-by: Scar26 <mmatty26@gmail.com>

--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ paginate     = 10
 
   # And you can even create generic menu
   [[menu.main]]
-    identifier = "blog"
+    identifier = "posts"
     name       = "Blog"
-    url        = "/blog"
+    url        = "/posts"
     
